--- a/home.html
+++ b/home.html
@@ -112,5 +112,7 @@
             window.location.href = 'login.html';  // Redirect to login page
         }
     </script>
+    <script></script>
+    
 </body>
 </html>
